--- a/Midterm Project.Rmd
+++ b/Midterm Project.Rmd
@@ -5,30 +5,155 @@ date: "November 29, 2017"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(readr)
 library(dplyr)
 library(ggplot2)
+library(knitr)
+library(lme4)
+library(MASS)
+library(gridExtra)
 ```
 
 #1. Introduction
+I use the allstate insurance purchase history as the dataset of this project. As a customer shops an insurance policy, he/she will receive a number of quotes with different coverage options before purchasing a plan. This is represented in this data as a series of rows that include a customer ID, information about the customer, information about the quoted policy, and the cost. The task of this project is to predict the purchased coverage options using a limited subset of the total interaction history.
 
-#Data
+#2. Description of the data
 ```{r}
 #Remove the column with NA.
 train <- read_csv("train.csv")
 train <- na.omit(train)
-head(train, n=9)
+kable(head(train, n=9))
 ```
-As a customer shops an insurance policy, he/she will receive a number of quotes with different coverage options before purchasing a plan. From the data above, a customer with ID 10000000 recieved nine quote and purchased the last one.
+##Variable Description
+There are total 25 variables for this data and with the variables descriptions as follow:
+
+customer_ID - A unique identifier for the customer
+shopping_pt - Unique identifier for the shopping point of a given customer
+record_type - 0=shopping point, 1=purchase point
+day - Day of the week (0-6, 0=Monday)
+time - Time of day (HH:MM)
+state - State where shopping point occurred
+location - Location ID where shopping point occurred
+group_size - How many people will be covered under the policy (1, 2, 3 or 4)
+homeowner - Whether the customer owns a home or not (0=no, 1=yes)
+car_age - Age of the customer¡¯s car
+car_value - How valuable was the customer¡¯s car when new
+risk_factor - An ordinal assessment of how risky the customer is (1, 2, 3, 4)
+age_oldest - Age of the oldest person in customer's group
+age_youngest - Age of the youngest person in customer¡¯s group
+married_couple - Does the customer group contain a married couple (0=no, 1=yes)
+C_previous - What the customer formerly had or currently has for product option C (0=nothing, 1, 2, 3,4)
+duration_previous -  how long (in years) the customer was covered by their previous issuer
+A,B,C,D,E,F,G - the coverage options
+cost - cost of the quoted coverage options
+
+##Explanation with the Customer ID
+
+As a customer shops an insurance policy, he/she will receive a number of quotes with different coverage options before purchasing a plan. For example, from the data above, a customer with ID 10000000 recieved nine quote and purchased the last one.
 
 ```{r}
 #Select quotes which customer purchased
-purchase <- train[train$record_type=="1", ]
-head(purchase, n=3)
+purchase <- train%>%
+  filter(record_type == 1)
+first3 <- head(purchase, n=3)
+kable(first3)
 
-ggplot(purchase, aes(x=shopping_pt)) +geom_bar()
+ggplot(purchase, aes(x=shopping_pt)) +geom_bar(fill = "#FF9966")+ ggtitle("Figure 2.1: Number of quotes until purchase") + xlab("Number of quotes") +ylab("Count")
 
 ```
+
+Each customer has many shopping points, where a shopping point is defined by a customer with certain characteristics viewing a product and its associated cost at a particular time. The data related to customers have these characteristics: 
+1) Some customer characteristics may change over time (e.g. as the customer changes or provides new information), and the cost depends on both the product and the customer characteristics. 
+2) A customer may represent a collection of people, as policies can cover more than one person. 
+3) A customer may purchase a product that was not viewed.
+
+# 3. EDA
+
+Before I fit the model, I did some data visualization to help me understand the data.
+
+## 3.1 Purchased/Unpurchased option choose.
+```{r,fig.width=20,fig.height=15}
+option.fig1 <- ggplot(train, aes(record_type, fill=factor(record_type)))+geom_bar()
+option.fig2 <- ggplot(train, aes(A, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig3 <- ggplot(train, aes(B, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig4 <- ggplot(train, aes(C, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig5 <- ggplot(train, aes(D, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig6 <- ggplot(train, aes(E, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig7 <- ggplot(train, aes(F, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+option.fig8 <- ggplot(train, aes(G, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
+title1=textGrob("Figure 3.1: Percent of purchase for each option", gp=gpar(fontsize=50,font=3))
+grid.arrange(option.fig1, option.fig2, option.fig3, option.fig4, option.fig5, option.fig6, option.fig7, option.fig8, top=title1)
+```
+From the figure above I found that customers has not much different in choosing each options.
+
+## 3.2 The comparasion between previous option C and option C
+```{r}
+c.fig1 <- ggplot(purchase, aes(x=factor(1), fill=factor(C_previous))) +geom_bar(width = 1) +coord_polar(theta="y") + scale_fill_manual(values=c("#d01c8b","#f1b6da", "#b8e186","#4dac26")) + xlab(" ") +ylab(" ")
+c.fig2 <- ggplot(purchase, aes(x=factor(1), fill=factor(C))) +geom_bar(width = 1) +coord_polar(theta="y") + scale_fill_manual(values=c("#d01c8b","#f1b6da", "#b8e186","#4dac26")) + xlab(" ") +ylab(" ")
+
+grid.arrange(c.fig1, c.fig2, ncol=2)
+
+```
+
+
+## 3.3 The relation ship between the oldest age in one group and the cost.
+```{r}
+age.fig <- ggplot(purchase) + geom_jitter(aes(x = age_oldest, y = cost),color = "gray") + geom_smooth(aes(x = age_oldest, y = cost), method = "lm",color = "navy") + geom_point(aes(x = age_youngest, y = cost),color = "pink") + geom_smooth(aes(x = age_youngest, y = cost), method = "lm",color = "orange")
+age.fig
+```
+
+
+
+## 3.4 Number of customers in each state
+```{r, warning=FALSE}
+state_count<- purchase %>%
+  count(state)
+state_count[37:49,1] <- c("AZ","CA","LA","MA","MN","MI","NV","NC","SC","TX","VT","VA","IL")
+
+for (i in 1:48) {
+  state_count$state [i]<- tolower(state.name[match(state_count$state[i], state.abb)])
+}
+colnames(state_count)[2] <- "numberofcustomer"
+
+us <- map_data("state") 
+gg <- ggplot()
+gg <- gg + geom_map(data=us, map=us,
+                    aes(x=long, y=lat, map_id=region),
+                    fill="#ffffff", color="white", size=0.15)
+gg <- gg + geom_map(data=state_count, map=us,
+                    aes(fill=numberofcustomer, map_id=state),
+                    color="#ffffff", size=0.15)
+gg <- gg + scale_fill_continuous(low='thistle2', high='darkred', 
+                                 guide='colorbar')
+gg <- gg + labs(x=NULL, y=NULL) + coord_map("albers", lat0 = 39, lat1 = 45) + theme(panel.border = element_blank()) + theme(panel.background = element_blank()) + theme(axis.ticks = element_blank()) + theme(axis.text = element_blank())
+gg
+
+
+```
+
+
+# 4. Model Analysis
+##Multilevel generalized linear model.
+First I want to find out the relationship between the option C each customer finally chose with the option C they chosen before. 
+
+$C_i = Group\_Size_{j[i]} + State_{k[i]} + Car\_Value_i + Risk\_Factor_i + Married\_Couple_i + C\_Previous_i + \epsilon_i$
+$C_i \sim N(\mu_C,\sigma^2_C)$
+$\epsilon_i \sim N(0,\sigma^2_C)$
+$Group\_Size_j \sim N(\mu_{Group\_Size},\sigma^2_{Group\_Size})$
+$State_k \sim N(\mu_{State},\sigma^2_{State})$
+
+```{r,warning=FALSE}
+
+c_purchase <- glmer(C ~ car_value + risk_factor + C_previous + married_couple + (1 | state), family = poisson()  ,data = purchase, Hess=F)
+summary(c_purchase)
+```
+
+```{r}
+
+```
+
+
+
 
