--- a/Midterm Project.Rmd
+++ b/Midterm Project.Rmd
@@ -14,6 +14,8 @@ library(knitr)
 library(lme4)
 library(MASS)
 library(gridExtra)
+library(grid)
+library(arm)
 ```
 
 #1. Introduction
@@ -83,17 +85,18 @@ option.fig5 <- ggplot(train, aes(D, fill=factor(record_type)))+geom_bar(alpha=0.
 option.fig6 <- ggplot(train, aes(E, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
 option.fig7 <- ggplot(train, aes(F, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
 option.fig8 <- ggplot(train, aes(G, fill=factor(record_type)))+geom_bar(alpha=0.75, position="fill")
-title1=textGrob("Figure 3.1: Percent of purchase for each option", gp=gpar(fontsize=50,font=3))
+title1=textGrob("Figure 3.1: Percentage of purchase for each option", gp=gpar(fontsize=40,font=3))
 grid.arrange(option.fig1, option.fig2, option.fig3, option.fig4, option.fig5, option.fig6, option.fig7, option.fig8, top=title1)
 ```
-From the figure above I found that customers has not much different in choosing each options.
+From the figure above I found that customers has not much difference in choosing each options. Also most of customers need more than five quotes then finally purchase.
 
 ## 3.2 The comparasion between previous option C and option C
 ```{r}
 c.fig1 <- ggplot(purchase, aes(x=factor(1), fill=factor(C_previous))) +geom_bar(width = 1) +coord_polar(theta="y") + scale_fill_manual(values=c("#d01c8b","#f1b6da", "#b8e186","#4dac26")) + xlab(" ") +ylab(" ")
 c.fig2 <- ggplot(purchase, aes(x=factor(1), fill=factor(C))) +geom_bar(width = 1) +coord_polar(theta="y") + scale_fill_manual(values=c("#d01c8b","#f1b6da", "#b8e186","#4dac26")) + xlab(" ") +ylab(" ")
 
-grid.arrange(c.fig1, c.fig2, ncol=2)
+title2=textGrob("Figure 3.2: Percentage of each option in option C", gp=gpar(fontsize=15,font=3))
+grid.arrange(c.fig1, c.fig2, ncol=2, top=title2)
 
 ```
 
@@ -135,7 +138,7 @@ gg
 
 
 # 4. Model Analysis
-##Multilevel generalized linear model.
+##4.1 Multilevel generalized linear model.
 First I want to find out the relationship between the option C each customer finally chose with the option C they chosen before. 
 
 $C_i = Group\_Size_{j[i]} + State_{k[i]} + Car\_Value_i + Risk\_Factor_i + Married\_Couple_i + C\_Previous_i + \epsilon_i$
@@ -145,13 +148,36 @@ $Group\_Size_j \sim N(\mu_{Group\_Size},\sigma^2_{Group\_Size})$
 $State_k \sim N(\mu_{State},\sigma^2_{State})$
 
 ```{r,warning=FALSE}
+#Fit the multilevel generalized linear model of option C with the predictor c_previous
+c_purchase1 <- glmer(C ~ car_value + risk_factor + C_previous + married_couple + (1 | state) + (1 | group_size), family = poisson()  ,data = purchase)
+summary(c_purchase1)
 
-c_purchase <- glmer(C ~ car_value + risk_factor + C_previous + married_couple + (1 | state), family = poisson()  ,data = purchase, Hess=F)
-summary(c_purchase)
+#Fit the multilevel generalized linear model of option C without the predictor c_previous
+c_purchase2 <- glmer(C ~ car_value + risk_factor + married_couple + (1 | state) + (1 | group_size), family = poisson()  ,data = purchase)
+summary(c_purchase2)
+
+#Find the fitted value and residules of this two model
+y_hat.1 <- fitted.values(c_purchase1)
+res.1 <- resid(c_purchase1, type = "response")
+binnedplot(y_hat.1,res.1)
+
+y_hat.2 <- fitted.values(c_purchase2)
+res.2 <- resid(c_purchase1, type = "response")
+binnedplot(y_hat.2,res.2)
 ```
 
+## 4.2 Purchase prediction with previous c option
 ```{r}
+train$plan <- paste0(train$A, train$B, train$C, train$D, train$E, train$F, train$G)
+train$plan <- as.factor(train$plan)
 
+test <- train[sample(1:nrow(train), 10000,replace=FALSE),]
+
+predict.1 <- glmer(record_type ~ C_previous + duration_previous  +(1 | plan), data=test, family = binomial, control = glmerControl(optimizer = "bobyqa"),nAGQ = 10)
+summary(predict.1)
+y_hat.3 <- fitted.values(predict.1)
+res.3 <- resid(predict.1, type = "response")
+binnedplot(y_hat.3,res.3)
 ```
 
 
